--- a/main.html
+++ b/main.html
@@ -5,11 +5,11 @@
 		<link rel="stylesheet" type="text/css" href="./style.css">
 		<script src="//code.jquery.com/jquery-1.10.2.js"></script>
  		<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-		<script type="text/javascript" src="./script.js"></script>
+		<script type="text/javascript" src="./main.js"></script>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="Content-Type" content="text/html; charset=EUC-KR">
-		<title>X-Inventor</title>
+		<title>Inventor-X</title>
 	</head>
 	<body>
 	 		 <div class="container-fluid">
@@ -31,7 +31,7 @@
 							<li><a>Gyro</a></li>
 						</ul>
 						<div>
-							<button type="button" id="simulButton" data-loading-text="Loading..." class="btn btn-primary" autocomplete="off">
+							<button type="button" id="simulating" data-loading-text="Loading..." class="btn" autocomplete="off">
 								Simulating
 							</button>
 						</div>
@@ -54,7 +54,7 @@
 						<li><a>Heater</a></li>
 					</ul>
 					<div>
-						<button type="button" id="simulButton" data-loading-text="Loading..." class="btn btn-primary" autocomplete="off">
+						<button type="button" id="create" data-loading-text="Loading..." class="btn" autocomplete="off">
 							Create
 						</button>
 					</div>
