--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 					<div class="col-sm-3 col-md-2 sidebar">
 						<h3>Input</h3>
 						<ul class="nav nav-sidebar">
-							<li><a href="#">Brightness<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Brightness<span class="sr-only">(current)</span></a></li>
 							<li><a>Length</a></li>
 							<li><a>Compass</a></li>
 							<li><a>Heart beat</a></li>
