--- a/main.html
+++ b/main.html
@@ -39,6 +39,20 @@
 				<div class="col-sm-6 col-md-8 board">
 					<h3>Board</h3>
 					<p>This is a board.</p>
+					<div class="container-fluid">
+						<div class="row">
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-3 sb">
+
+							</div>
+							<div class="col-md-3">
+
+							</div>
+							<div class="col-md-1">
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="col-sm-3 col-md-2 sidebar">
 					<h3>Output</h3>
