--- a/main.html
+++ b/main.html
@@ -18,17 +18,17 @@
 						<h3>Input</h3>
 						<ul class="nav nav-sidebar">
 							<li class="item"><a href="#">Brightness<span class="sr-only">(current)</span></a></li>
-							<li><a>Length</a></li>
-							<li><a>Compass</a></li>
-							<li><a>Heart beat</a></li>
-							<li><a>Sound</a></li>
-							<li><a>Time</a></li>
-							<li><a>Rotation</a></li>
-							<li><a>Bluetooth</a></li>
-							<li><a>Wi-Fi</a></li>
-							<li><a>Camera</a></li>
-							<li><a>Color</a></li>
-							<li><a>Gyro</a></li>
+							<li class="item"><a href="#">Length<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Compass<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Heart beat<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Sound<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Time<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Rotation<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Bluetooth<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Wi-Fi<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Camera<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Color<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Gyro<span class="sr-only">(current)</span></a></li>
 						</ul>
 						<div>
 							<button type="button" id="simulating" data-loading-text="Loading..." class="btn" autocomplete="off">
