--- a/main.html
+++ b/main.html
@@ -46,7 +46,7 @@
 							<div class="col-md-3 sb">
 
 							</div>
-							<div class="col-md-3">
+							<div class="col-md-3 ob">
 
 							</div>
 							<div class="col-md-1">
@@ -57,15 +57,15 @@
 				<div class="col-sm-3 col-md-2 sidebar">
 					<h3>Output</h3>
 					<ul class="nav nav-sidebar">
-						<li><a href="#">Speaker<span class="sr-only">(current)</span></a></li>
-						<li><a>Display</a></li>
-						<li><a>Movement</a></li>
-						<li><a>Light</a></li>
-						<li><a>Vibation</a></li>
-						<li><a>Save Data</a></li>
-						<li><a>H A</a></li>
-						<li><a>Waterpump</a></li>
-						<li><a>Heater</a></li>
+						<li class="output"><a href="#">Speaker<span class="sr-only">(current)</span></a></li>
+						<li class="output"><a href="#">Movement<span class="sr-only">(current)</span></a></li>
+						<li class="output"><a href="#">Light<span class="sr-only">(current)</span></a></li>
+						<li class="output"><a href="#">Vibration<span class="sr-only">(current)</span></a></li>
+						<li class="output"><a href="#">Save Data<span class="sr-only">(current)</span></a></li>
+						<li class="output"><a href="#">H A<span class="sr-only">(current)</span></a></li>
+						<li class="output"><a href="#">Waterpump<span class="sr-only">(current)</span></a></li>
+						<li class="output"><a href="#">Display<span class="sr-only">(current)</span></a></li>
+						<li class="output"><a href="#">Heater<span class="sr-only">(current)</span></a></li>
 					</ul>
 					<div>
 						<button type="button" id="create" data-loading-text="Loading..." class="btn" autocomplete="off">
