--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
 							</button>
 						</div>
 					</div>
-				<div class="col-sm-6 col-md-8 board">
+				<div class="col-sm-6 col-md-8 board board2">
 					<h3>Board</h3>
 					<p>This is a board.</p>
 					<div class="container-fluid">
