--- a/main.html
+++ b/main.html
@@ -36,10 +36,10 @@
 							</button>
 						</div>
 					</div>
-				<div class="col-sm-6 col-md-8 board board2">
+				<div class="col-sm-6 col-md-8 board">
 					<h3>Board</h3>
 					<p>This is a board.</p>
-					<div class="container-fluid">
+					<div class="container-fluid board2">
 						<div class="row">
 							<div class="col-md-1">
 							</div>
