--- a/main.html
+++ b/main.html
@@ -39,15 +39,11 @@
 				<div class="col-sm-6 col-md-8 board">
 					<h3>Board</h3>
 					<p>This is a board.</p>
-					<div class="container-fluid board2">
+					<div class="container-fluid">
 						<div class="row">
 							<div class="col-md-1">
 							</div>
-							<div class="col-md-3 sb">
-
-							</div>
-							<div class="col-md-3 ob">
-
+							<div class="col-md-6 sb">							
 							</div>
 							<div class="col-md-1">
 							</div>
@@ -57,15 +53,15 @@
 				<div class="col-sm-3 col-md-2 sidebar">
 					<h3>Output</h3>
 					<ul class="nav nav-sidebar">
-						<li class="output"><a href="#">Speaker<span class="sr-only">(current)</span></a></li>
-						<li class="output"><a href="#">Movement<span class="sr-only">(current)</span></a></li>
-						<li class="output"><a href="#">Light<span class="sr-only">(current)</span></a></li>
-						<li class="output"><a href="#">Vibration<span class="sr-only">(current)</span></a></li>
-						<li class="output"><a href="#">Save Data<span class="sr-only">(current)</span></a></li>
-						<li class="output"><a href="#">H A<span class="sr-only">(current)</span></a></li>
-						<li class="output"><a href="#">Waterpump<span class="sr-only">(current)</span></a></li>
-						<li class="output"><a href="#">Display<span class="sr-only">(current)</span></a></li>
-						<li class="output"><a href="#">Heater<span class="sr-only">(current)</span></a></li>
+						<li class="item"><a href="#">Speaker<span class="sr-only">(current)</span></a></li>
+						<li class="item"><a href="#">Movement<span class="sr-only">(current)</span></a></li>
+						<li class="item"><a href="#">Light<span class="sr-only">(current)</span></a></li>
+						<li class="item"><a href="#">Vibration<span class="sr-only">(current)</span></a></li>
+						<li class="item"><a href="#">Save Data<span class="sr-only">(current)</span></a></li>
+						<li class="item"><a href="#">H A<span class="sr-only">(current)</span></a></li>
+						<li class="item"><a href="#">Waterpump<span class="sr-only">(current)</span></a></li>
+						<li class="item"><a href="#">Display<span class="sr-only">(current)</span></a></li>
+						<li class="item"><a href="#">Heater<span class="sr-only">(current)</span></a></li>
 					</ul>
 					<div>
 						<button type="button" id="create" data-loading-text="Loading..." class="btn" autocomplete="off">
