--- a/main.html
+++ b/main.html
@@ -17,17 +17,17 @@
 					<div class="col-sm-3 col-md-2 sidebar">
 						<h3>Input</h3>
 						<ul class="nav nav-sidebar">
-							<li id="il"><a href="#">Brightness<span class="sr-only">(current)</span></a></li id="il">
-							<li id="il"><a href="#">Length<span class="sr-only">(current)</span></a></li id="il">
-							<li id="il"><a href="#">Compass<span class="sr-only">(current)</span></a></li id="il">
-							<li id="il"><a href="#">Heart beat<span class="sr-only">(current)</span></a></li id="il">
-							<li id="il"><a href="#">Sound<span class="sr-only">(current)</span></a></li id="il">
-							<li id="il"><a href="#">Time<span class="sr-only">(current)</span></a></li id="il">
-							<li id="il"><a href="#">Rotation<span class="sr-only">(current)</span></a></li id="il">
-							<li id="il"><a href="#">Bluetooth<span class="sr-only">(current)</span></a></li id="il">
-							<li id="il"><a href="#">Wi-Fi<span class="sr-only">(current)</span></a></li id="il">
-							<li id="il"><a href="#">Camera<span class="sr-only">(current)</span></a></li id="il">
-							<li id="il"><a href="#">Color<span class="sr-only">(current)</span></a></li id="il">
+							<li id="il"><a href="#">Brightness<span class="sr-only">(current)</span></a></li>
+							<li id="il"><a href="#">Length<span class="sr-only">(current)</span></a></li>
+							<li id="il"><a href="#">Compass<span class="sr-only">(current)</span></a></li>
+							<li id="il"><a href="#">Heart beat<span class="sr-only">(current)</span></a></li>
+							<li id="il"><a href="#">Sound<span class="sr-only">(current)</span></a></li>
+							<li id="il"><a href="#">Time<span class="sr-only">(current)</span></a></li>
+							<li id="il"><a href="#">Rotation<span class="sr-only">(current)</span></a></li>
+							<li id="il"><a href="#">Bluetooth<span class="sr-only">(current)</span></a></li>
+							<li id="il"><a href="#">Wi-Fi<span class="sr-only">(current)</span></a></li>
+							<li id="il"><a href="#">Camera<span class="sr-only">(current)</span></a></li>
+							<li id="il"><a href="#">Color<span class="sr-only">(current)</span></a></li>
 							<li id="il"><a href="#">Gyro<span class="sr-only">(current)</span></a></li>
 						</ul>
 						<div>
