--- a/main.html
+++ b/main.html
@@ -17,18 +17,18 @@
 					<div class="col-sm-3 col-md-2 sidebar">
 						<h3>Input</h3>
 						<ul class="nav nav-sidebar">
-							<li id="il"><a href="#">Brightness<span class="sr-only">(current)</span></a></li>
-							<li id="il"><a href="#">Length<span class="sr-only">(current)</span></a></li>
-							<li id="il"><a href="#">Compass<span class="sr-only">(current)</span></a></li>
-							<li id="il"><a href="#">Heart beat<span class="sr-only">(current)</span></a></li>
-							<li id="il"><a href="#">Sound<span class="sr-only">(current)</span></a></li>
-							<li id="il"><a href="#">Time<span class="sr-only">(current)</span></a></li>
-							<li id="il"><a href="#">Rotation<span class="sr-only">(current)</span></a></li>
-							<li id="il"><a href="#">Bluetooth<span class="sr-only">(current)</span></a></li>
-							<li id="il"><a href="#">Wi-Fi<span class="sr-only">(current)</span></a></li>
-							<li id="il"><a href="#">Camera<span class="sr-only">(current)</span></a></li>
-							<li id="il"><a href="#">Color<span class="sr-only">(current)</span></a></li>
-							<li id="il"><a href="#">Gyro<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Brightness<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Length<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Compass<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Heart beat<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Sound<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Time<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Rotation<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Bluetooth<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Wi-Fi<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Camera<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Color<span class="sr-only">(current)</span></a></li>
+							<li class="item"><a href="#">Gyro<span class="sr-only">(current)</span></a></li>
 						</ul>
 						<div>
 							<button type="button" id="simulating" data-loading-text="Loading..." class="btn" autocomplete="off">
@@ -53,15 +53,15 @@
 				<div class="col-sm-3 col-md-2 sidebar">
 					<h3>Output</h3>
 					<ul class="nav nav-sidebar">
-						<li id="ol"><a href="#">Speaker<span class="sr-only">(current)</span></a></li>
-						<li id="ol"><a href="#">Movement<span class="sr-only">(current)</span></a></li>
-						<li id="ol"><a href="#">Light<span class="sr-only">(current)</span></a></li>
-						<li id="ol"><a href="#">Vibration<span class="sr-only">(current)</span></a></li>
-						<li id="ol"><a href="#">Save Data<span class="sr-only">(current)</span></a></li>
-						<li id="ol"><a href="#">H A<span class="sr-only">(current)</span></a></li>
-						<li id="ol"><a href="#">Waterpump<span class="sr-only">(current)</span></a></li>
-						<li id="ol"><a href="#">Display<span class="sr-only">(current)</span></a></li>
-						<li id="ol"><a href="#">Heater<span class="sr-only">(current)</span></a></li>
+						<li class="item"><a href="#">Speaker<span class="sr-only">(current)</span></a></li>
+						<li class="item"><a href="#">Movement<span class="sr-only">(current)</span></a></li>
+						<li class="item"><a href="#">Light<span class="sr-only">(current)</span></a></li>
+						<li class="item"><a href="#">Vibration<span class="sr-only">(current)</span></a></li>
+						<li class="item"><a href="#">Save Data<span class="sr-only">(current)</span></a></li>
+						<li class="item"><a href="#">H A<span class="sr-only">(current)</span></a></li>
+						<li class="item"><a href="#">Waterpump<span class="sr-only">(current)</span></a></li>
+						<li class="item"><a href="#">Display<span class="sr-only">(current)</span></a></li>
+						<li class="item"><a href="#">Heater<span class="sr-only">(current)</span></a></li>
 					</ul>
 					<div>
 						<button type="button" id="create" data-loading-text="Loading..." class="btn" autocomplete="off">
