--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
 						<div class="row">
 							<div class="col-md-1">
 							</div>
-							<div class="col-md-6 sb">							
+							<div class="col-md-6 ib">							
 							</div>
 							<div class="col-md-1">
 							</div>
