--- a/main.html
+++ b/main.html
@@ -18,18 +18,18 @@
 					<div class="col-sm-3 col-md-2 sidebar">
 						<div class="input-sidebar"><h2 id="title">INPUT</h2></div>
 						<ul class="nav nav-sidebar">
-							<li class="input-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-232-sun.png"> Brightness</h3></li>
-							<li class="input-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-69-ruler.png"> Length</h3></li>
-							<li class="input-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-61-compass.png"> Compass</h3></li>
-							<li class="input-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-13-heart.png"> Heart beat</h3></li>
-							<li class="input-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-301-microphone.png"> Sound</h3></li>
-							<li class="input-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-55-clock.png"> Time</h3></li>
-							<li class="input-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-82-refresh.png"> Rotation</h3></li>
-							<li class="input-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-226-bluetooth.png"> Bluetooth</h3></li>
-							<li class="input-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-74-wifi.png"> Wi-Fi</h3></li>
-							<li class="input-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-12-camera.png"> Camera</h3></li>
-							<li class="input-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-91-eyedropper.png"> Color</h3></li>
-							<li class="input-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-234-direction.png"> Gyro</h3></li>
+							<li class="input-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-232-sun.png"> Brightness</h3></li>
+							<li class="input-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-69-ruler.png"> Length</h3></li>
+							<li class="input-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-61-compass.png"> Compass</h3></li>
+							<li class="input-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Heart beat</h3></li>
+							<li class="input-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-301-microphone.png"> Sound</h3></li>
+							<li class="input-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-55-clock.png"> Time</h3></li>
+							<li class="input-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-82-refresh.png"> Rotation</h3></li>
+							<li class="input-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-226-bluetooth.png"> Bluetooth</h3></li>
+							<li class="input-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-74-wifi.png"> Wi-Fi</h3></li>
+							<li class="input-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-12-camera.png"> Camera</h3></li>
+							<li class="input-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-91-eyedropper.png"> Color</h3></li>
+							<li class="input-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-234-direction.png"> Gyro</h3></li>
 						</ul>
 						<div class="process">
 							<button type="button" id="simulating" data-loading-text="Loading..." class="btn" autocomplete="off">
@@ -44,15 +44,15 @@
 				<div class="col-sm-3 col-md-2 sidebar">
 					<div class="output-sidebar"><h2 id="title">OUTPUT</h2></div>
 					<ul class="nav nav-sidebar">
-						<li class="output-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-13-heart.png"> Speaker</h3></li>
-						<li class="output-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-13-heart.png"> Movement</h3></li>
-						<li class="output-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-13-heart.png"> Light</h3></li>
-						<li class="output-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-13-heart.png"> Vibration</h3></li>
-						<li class="output-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-13-heart.png"> Save Data</h3></li>
-						<li class="output-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-13-heart.png"> H A</h3></li>
-						<li class="output-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-13-heart.png"> Waterpump</h3></li>
-						<li class="output-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-13-heart.png"> Display</h3></li>
-						<li class="output-item"><h3><img id="glyphicons" src="./assets/img/glyphicons-13-heart.png"> Heater</h3></li>
+						<li class="output-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Speaker</h3></li>
+						<li class="output-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Movement</h3></li>
+						<li class="output-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Light</h3></li>
+						<li class="output-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Vibration</h3></li>
+						<li class="output-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Save Data</h3></li>
+						<li class="output-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> H A</h3></li>
+						<li class="output-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Waterpump</h3></li>
+						<li class="output-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Display</h3></li>
+						<li class="output-item"><h3><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Heater</h3></li>
 					</ul>
 					<div class="process">
 						<button type="button" id="create" data-loading-text="Loading..." class="btn" autocomplete="off">
