--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 				<div class="col-sm-6 col-md-8 board">
 					<h3>Board</h3>
 					<p>This is a board.</p>
-					<h3 id="draw"></h3>
+					<div id="draw">
+						
+					</div>
 				</div>
 				<div class="col-sm-3 col-md-2 sidebar">
 					<div class="output-sidebar"><h2 id="title">OUTPUT</h2></div>
