--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<div class="row">
 					<div class="col-sm-3 col-md-2 sidebar">
 						<div class="input-sidebar"><h2 class="title input">INPUT</h2></div>
-						<ul class="nav nav-sidebar" id="i">
+						<ul class="nav nav-sidebar">
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-232-sun.png"> Brightness</h4></li>
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-69-ruler.png"> Length</h4></li>
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-61-compass.png"> Compass</h4></li>
@@ -44,7 +44,7 @@
 				</div>
 				<div class="col-sm-3 col-md-2 sidebar">
 					<div class="output-sidebar"><h2 class="title output">OUTPUT</h2></div>
-					<ul class="nav nav-sidebar" id="o">
+					<ul class="nav nav-sidebar">
 						<li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Speaker</h4></li>
 						<li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Movement</h4></li>
 						<li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Light</h4></li>
