--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    88   88             88 88     88  88      88  88      88          88     88  88     888     Y8,        ,8P 88       'Y8
   88     88            88 88      88 88       8888       88          88      88 88     888      Y8a.    .a8P  88        8a
 .88       88.          88 88       8888`       88        88888888888 88       8888     888       '"Y8888Y"'   88        Y8
-     Copyright © 2015 Lounge. All rights reserved.                           -->
+     Copyright © 2015 X-Inventor. All rights reserved.                           -->
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/bootstrap.min.css">
