--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
 						<h3 id="draw"></h3>
 						<div class="detail">
 							<h2 class="title">DETAIL</h2>
+							<table class="table">
+								<thead>
+									<tr>
+										<th>Light</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td>1</td>
+									</tr>
+								</tbody>
+							</table>
 						</div>
 					</div>
 				<div class="col-sm-3 col-md-2 sidebar">
