index.html, style.css
Detail section complition

--- a/index.html
+++ b/index.html
@@ -53,6 +53,32 @@
 						<h3 id="draw"></h3>
 						<div class="detail">
 							<h2 class="title"><label>DETAIL</label></h2>
+							<div class="detailContent">
+								<table>
+									<tr>
+										<th>| Brightness</th>
+										<td class="selector">
+											<select class="form-control input-lg">
+												<option value=""></option>
+                   				        		<option value="0">Daytime</option>
+                   				      			<option value="1">Midnight</option>
+                   				      			<option value="2">Night</option>
+                   				      			<option value="3">Laser</option>
+                   				      			<option value="4">LED</option>
+											</select>
+										</td>
+									</tr>
+									<tr>
+										<th>| Length</th>
+										<td class="selector">
+											<div class="input-group input-group-lg">
+											<input name="length" type="text" class="form-control">
+                        	    			<span class="input-group-addon">CM</span>
+                        	    			</div>
+										</td>
+									</tr>
+								</table>
+							</div>
 						</div>
 						<!-- 
 						<div class="detail">
