index.html, main.js
focus 테스트 해봄

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<div class="detailContent">
 								<table>
 									<tr>
-										<th>| Brightness</th>
+										<th><label>| Brightness</label></th>
 										<td class="selector">
 											<select class="form-control input-lg">
 												<option value=""></option>
@@ -69,7 +69,7 @@
 										</td>
 									</tr>
 									<tr>
-										<th>| Length</th>
+										<th><label>| Length</label></th>
 										<td class="selector">
 											<div class="input-group input-group-lg">
 											<input name="length" type="text" class="form-control">
