--- a/index.html
+++ b/index.html
@@ -54,12 +54,7 @@
 						<div class="detail">
 							<h2 class="title"><label>DETAIL</label></h2>
 							<div class="detailContent">
-								<table>
-<<<<<<< HEAD
-=======
-									
->>>>>>> origin/master
-								</table>
+								<table></table>
 							</div>
 						</div>
 				</div>
