main.js index.html
Movement

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div class="row">
 					<div class="col-sm-2 col-md-2 sidebar">
 						<div class="input-sidebar"><h2 class="title"><label>INPUT</label></h2></div>
-						<ul class="nav nav-sidebar">
+						<ul class="nav nav-sidebar" id="slider">
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-232-sun.png"> Brightness</h4></li>
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-69-ruler.png"> Length</h4></li>
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-61-compass.png"> Compass</h4></li>
@@ -60,7 +60,7 @@
 				</div>
 				<div class="col-sm-2 col-md-2 sidebar">
 					<div class="output-sidebar"><h2 class="title"><label>OUTPUT</label></h2></div>
-					<ul class="nav nav-sidebar">
+					<ul class="nav nav-sidebar" id="slider">
 						<li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-185-volume-up.png"> Speaker</h4></li>
 						<li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-138-cogwheels.png"> Movement</h4></li>
 						<li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-65-lightbulb.png"> Light</h4></li>
