--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<h2 class="title"><label>DETAIL</label></h2>
 							<div class="detailContent">
 								<table><?php
-							echo "hello World!!";
+							echo ("hello World!!");
 								?></table>
 							</div>
 						</div>
