--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-23-fire.png"> Temperature</h4></li>
 						</ul>
 						<div class="process">
+							<a href="./simulate.html">
 							<button type="button" id="simulate" data-loading-text="Loading..." class="btn">
 								<h3>Simulate</h3>
 							</button>
+							</a>
 						</div>
 					</div>
 					<div class="col-sm-8 col-md-8 board" id="onBoard">
