--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--
 '88       88'          88 8888       88 88            88 88888888888 8888       88 88888888888   ,ad8888ba,   88888888ba,
   88     88            88 88 88      88  88          88  88          88 88      88 """"888""""  d8"'    `"8b  88      `"8b
