--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
 					</ul>
 					<div class="process">
 						<button type="button" id="create" data-loading-text="Loading..." class="btn">
+							<a href="./clock.html">
 							<h3>Create</h3>
+							</a>
 						</button>
 					</div>
 				</div>
